fix main menu colors, fix facets display on IE8

--- a/resources/www/_shared/styles/_main-menu.scss
+++ b/resources/www/_shared/styles/_main-menu.scss
@@ -4,9 +4,8 @@ $mainMenuLineHeight: 36px !default;
 $mainMenuBackgroundColor: #fceb3f !default;
 $mainMenuLinkColor: #000000 !default;
 $mainMenuLinkHoverColor: #fffbcd !default;
-$mainMenuLinkActiveColor: #000000 !default;
-
-$mainMenuLinkBackgroundHoverColor: #FFFFFF !default;
+$mainMenuLinkActiveColor: #FFFFFF !default;
+$mainMenuLinkBackgroundHoverColor: transparent !default;
 $mainMenuLinkHoverColor: #000000 !default;
 $mainMenuMarginBottom: 0 !default;
 $mainMenuBottomBorder: none !default;
@@ -27,7 +26,7 @@ $mainMenuBottomBorder: none !default;
   }
   #mainLogo {
     margin:0 10px;
-    margin-top: 5px;
+    margin-top: 3px;
 
   }
   li {
@@ -50,7 +49,7 @@ $mainMenuBottomBorder: none !default;
         padding: 0 5px;
         height: $mainMenuHeight - 3;
         &.selected {
-          border-top: 3px solid white;
+          border-top: 3px solid $mainMenuLinkActiveColor;
         }
       }
       &:hover {
